fix render image alignment

--- a/styles.css
+++ b/styles.css
@@ -503,7 +503,7 @@ h3 {
 #design-card {
   background-size: 200%;
   background-image: url('assets/design/gyroscope.jpg');
-  background-position: 30% 10%;
+  background-position: 22% 10%;
 }
 
 .nav-card::before {
